feat: add get endpoint for dataset info
